// Copyright 2017 The Kubernetes Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kubernetes/dashboard/pkg/api/v1/deployment/proto";

package configmap;

service Route {
  rpc List (ConfigMapListRequest) returns (ConfigMapList) {}
  rpc Get (ConfigMapGetRequest) returns (ConfigMapDetails) {}
}

message ConfigMapListRequest {}

// TODO: Missing params.
message ConfigMapGetRequest {}

message ConfigMapList {
  ListMeta listMeta = 1;
  repeated ConfigMap items = 2;
}

message ConfigMap {
  ObjectMeta objectMeta = 1;
  TypeMeta typeMeta = 2;
}

// TODO: Previously we had list of non-critical errors here: Errors []error `json:"errors"`.
message ConfigMapDetails {
  ObjectMeta objectMeta = 1;
  TypeMeta typeMeta = 2;
  map<string, string> data = 3;
}

// TODO: Export to common types file.
message ListMeta {
  int32 totalItems = 1;
}

// TODO: Export to common types file.
message ObjectMeta {
  string name = 1;
  string namespace = 2;
  map<string, string> labels = 3;
  map<string, string> annotations = 4;
  google.protobuf.Timestamp creationTimestamp = 5;
  string uid = 6;
}

// TODO: Export to common types file.
message TypeMeta {
  string kind = 1;
  bool scalable = 2;
}

